Revise README for improved clarity and details
Updated README.md to enhance clarity and detail about the Nettylagger Mod Analyzer's functionality, features, and usage instructions.